se crea y esta funcional la barra de navegacion

--- a/ANGULAR/libreriafront/src/index.html
+++ b/ANGULAR/libreriafront/src/index.html
@@ -8,6 +8,26 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Libreria</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="autor">Autores <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="libro">Libros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="editorial">Editoriales</a>
+        </li>
+        
+      </ul>
+    </div>
+  </nav>
   <app-root></app-root>
 </body>
 </html>
